[build-system]
# Need to put something here, or confirm that the below works
requires = ["flit_core >=3.2,<3.7"]
build-backend = "flit_core.buildapi"

[project]
name = "ebnn"
authors = [{name=Bradley McDanel}, {name=Surat Teerapittayanon}, {name=Domingo Alvarez Duarte}]
description = "Header-only C library for Binary Neural Network Feedforward Inference"
readme = "README.md"
license = {file = "LICENSE"}
classifiers = [
  # Should the line below be inactive?
  "Development Status :: 6 - Mature",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.7",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
]
dynamic = ["version"]
requires-python = ">=3.7"
dependencies = [
  "astroid==1.5.3",
  "autopep8==1.3.2",
  "backports.functools-lru-cache==1.4",
  "backports.shutil-get-terminal-size==1.0.0",
  "chainer==2.0.1",
  "configparser==3.5.0",
  "cupy==1.0.1",
  "decorator==4.0.11",
  "enum34==1.1.6",
  "filelock==2.0.10",
  "h5py==2.7.0",
  "ipython==5.4.1",
  "ipython-genutils==0.2.0",
  "isort==4.2.15",
  "lazy-object-proxy==1.3.1",
  "mccabe==0.6.1",
  "nose==1.3.7",
  "numpy==1.13.1",
  "pathlib2==2.3.0",
  "pexpect==4.2.1",
  "pickleshare==0.7.4",
  "prompt-toolkit==1.0.14",
  "protobuf==3.3.0",
  "ptyprocess==0.5.2",
  "pycodestyle==2.3.1",
  "Pygments==2.2.0",
  "pylint==1.7.2",
  "scandir==1.5",
  "simplegeneric==0.8.1",
  "singledispatch==3.4.0.3",
  "six==1.10.0",
  "traitlets==4.3.2",
  "wcwidth==0.1.7",
  "wrapt==1.10.10",
]
